add another plot

--- a/index.html
+++ b/index.html
@@ -80,8 +80,13 @@
           <iframe title="Entwicklung der Impfkampagne gegen COVID-19" aria-label="Interactive line chart"
             id="datawrapper-chart-KW0Ku" src="https://datawrapper.dwcdn.net/KW0Ku/1/" scrolling="no" frameborder="0"
             style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe>
-        </div>
+        </div>       
 
+      </div>
+      <div class="box">
+          
+        <iframe title="Verimpfung der verfügbaren Dosen" aria-label="Interactive area chart" id="datawrapper-chart-IKoqY" 
+        src="https://datawrapper.dwcdn.net/IKoqY/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe>
       </div>
     </section>
 
