update layout add kbv

--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@ xmlhttp.send();
 
     <!-- Top Container -->
     <div id="logosdiv"><p style="text-align: right;">
-      <img _ngcontent-jga-c187="" src="https://ziwebstorage.blob.core.windows.net/appradar/assets/logo_zi_small_transparent.png" 
-          style="height: 2rem; filter: brightness(120%);margin:0px;">
+      <a href="https://www.zi.de"><img _ngcontent-jga-c187="" src="img/zi.png" 
+          style="height: 3rem; margin:5px;"></a>
+      <a href="https://www.kbv.de"><img _ngcontent-jga-c187="" src="img/kbv.jpg" 
+          style="height: 3rem; margin:5px;"></a>
     </p>
   </div>
     <section class="top-container">
@@ -87,11 +89,10 @@ xmlhttp.send();
       </div>
       <div class="box">
         
-        <div>
           <iframe title="Stand der Impfkampagne gegen COVID-19" aria-label="Interactive area chart"
           id="datawrapper-chart-i0p1O" src="https://datawrapper.dwcdn.net/i0p1O/2/" scrolling="no" frameborder="0"
           style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe>
-        </div>
+        
 
       </div>
       <div class="box">
@@ -140,7 +141,7 @@ xmlhttp.send();
         | <a href="https://www.zi.de/footer/datenschutzhinweis/">Datenschutzhinweis</a>
       </p>
       <p style="font-size:8px;">
-        Quelle Titelbild <a href="https://www.pexels.com/de-de/foto/farbe-klinik-gesundheit-krankenhaus-5863367/">hier</a>
+         <a href="https://www.pexels.com/de-de/foto/farbe-klinik-gesundheit-krankenhaus-5863367/">Quelle Titelbild</a>
       </p>
     </footer>
 
