fix mobile border

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@ xmlhttp.send();
 
 
     <!-- Top Container -->
-    <div id="logosdiv"><p style="text-align: right;">
+    <div id="logosdiv">
+      <p style="text-align: right;">
       <a href="https://www.zi.de"><img _ngcontent-jga-c187="" src="img/zi.png" 
           style="height: 3rem; margin:5px;"></a>
       <a href="https://www.kbv.de"><img _ngcontent-jga-c187="" src="img/kbv.jpg" 
@@ -136,7 +137,7 @@ xmlhttp.send();
     </nav>
     <!-- Footer -->
     <footer>
-      <p>&copy; 2021 Zentralinstitut für die kassenärztliche Versorgung in der Bundesrepublik Deutschland |
+      <p>&copy; 2021 | <a href="https://www.zidatasciencelab.de">Zi Data Science Lab</a> | Zentralinstitut für die kassenärztliche Versorgung in der Bundesrepublik Deutschland |
         <a href="https://www.zi.de/meta/impressum/">Impressum</a>
         | <a href="https://www.zi.de/footer/datenschutzhinweis/">Datenschutzhinweis</a>
       </p>
