--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     console.log(myObj);
   }
 };
-xmlhttp.open("GET", "https://raw.githubusercontent.com/zidatalab/covid19dashboard/master/data/tabledata/impfdax_stand.json", true);
+xmlhttp.open("GET", "https://ziwebstorage.blob.core.windows.net/publicdata/impfdax_stand.json", true);
 xmlhttp.send();
 
 </script>
