remove last update info

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ xmlhttp.send();
         src="https://datawrapper.dwcdn.net/tp38e/1/" scrolling="no" frameborder="0"
         style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe>          
         <div>
-          <p class="caption">Datenstand: BMG/RKI Impfdashboard <span id="standrki"></span>, KBV Impfdokumentation <span id="standkbv"></span><br> 
-            Letzte Datenaktualisierung: <span id="aktualisiert"></span>,<span id="aktualisiertuhr"></span> Uhr</p>
+         <!--  <p class="caption">Datenstand: BMG/RKI Impfdashboard <span id="standrki"></span>, KBV Impfdokumentation <span id="standkbv"></span><br> 
+            Letzte Datenaktualisierung: <span id="aktualisiert"></span>,<span id="aktualisiertuhr"></span> Uhr </p>-->
         </div>
       </div>
       <div style="background-color: rgba(0, 0, 0, 0.057);border-radius: 30px;padding: 2rem;">
