--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </div>
     <div class="box">
       <iframe title="Stand der Impfkampagne nach Bundesländern" aria-label="chart" id="datawrapper-chart-zA0AE"
-        src="https://datawrapper.dwcdn.net/zA0AE/10/" scrolling="no" frameborder="0"
+        src="https://datawrapper.dwcdn.net/zA0AE/" scrolling="no" frameborder="0"
         style="width: 0; min-width: 100% !important; border: none;" height="964"></iframe>
     </div>
 
