--- a/index.html
+++ b/index.html
@@ -149,6 +149,11 @@
           style="width: 0; min-width: 100% !important; border: none;" height="500"></iframe>
       </div>
     </div>
+    <div class="box">
+      <iframe title="Projektion verfügbarer Impfdosen pro Woche in den Praxen" aria-label="Interactive line chart"
+        id="datawrapper-chart-R3M2J" src="https://datawrapper.dwcdn.net/R3M2J/3/" scrolling="no" frameborder="0"
+        style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe>  
+    </div>
 
 
 
