--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
           Liegen keine Informationen vom PEI vor,
           wird eine Verteilung zugesagter Lieferungen nach Bevölkerungsschlüssel angenommen.
         </p>
+        <p>
+          <strong>27.4.2021</strong><br>
+          Durch eine Änderung der Daten auf impfdashboard.de sind aktuell die Liefermengen an die Impfzentren und die Summe der Lieferungen fehlerhaft. Diese Fehler wird zeitnah korrigiert.
+        </p>
       </div>
 
     </div>
