--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </p>
         <p>
           <strong>27.4.2021</strong><br>
-          Durch eine Änderung der Daten auf impfdashboard.de sind aktuell die Liefermengen an die Impfzentren und die Summe der Lieferungen fehlerhaft. Diese Fehler wird zeitnah korrigiert.
+          <span style="color:crimson;">Durch eine Änderung der Daten auf impfdashboard.de sind aktuell die Liefermengen an die Impfzentren und die Summe der Lieferungen fehlerhaft. Diese Fehler wird zeitnah korrigiert.</span>
         </p>
       </div>
 
