--- a/index.html
+++ b/index.html
@@ -84,16 +84,20 @@
           <strong>6.4.2021</strong><br>
           Beginn der Impfungen in den Arztpraxen.
         </p>
-        <p>
+<!--         <p>
           <strong>20.4.2021</strong><br>
           Die Daten zu den Lieferungen wurden mit Angaben des PEI zum Warenausgang für die KW 14 und 15 aktualisiert.
           Liegen keine Informationen vom PEI vor,
           wird eine Verteilung zugesagter Lieferungen nach Bevölkerungsschlüssel angenommen.
-        </p>
+        </p> -->
         <p>
           <strong>27.4.2021</strong><br>
-          <span style="color:crimson;">Durch eine Änderung der Daten auf impfdashboard.de sind aktuell die Liefermengen an 
-            die Impfzentren und die Summe der Lieferungen fehlerhaft. Dieser Fehler wird zeitnah korrigiert.</span>
+          Die Angaben zu Lieferungen an Praxen und Impfzentren wurden angepasst. Bei der Berechnung von Impfquoten betrachten wir alle Lieferungen
+          einer Kalenderwoche als vollzogen. Abweichungen zu den Angaben des BMG möglich.
+        </p>
+        <p>
+          <strong>Aktualisierung der Informationen</strong>
+          <p>Die Angaben auf dieser Seite werden bis 11:30 Uhr vormittags stündlich aktualisiert. Die erste Aktualisierung erfolgt um 6:30 Uhr.</p>
         </p>
       </div>
 
