--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <p>
           <strong>27.4.2021</strong><br>
           Die Angaben zu Lieferungen an Praxen und Impfzentren wurden angepasst. Bei der Berechnung von Impfquoten betrachten wir alle Lieferungen
-          einer Kalenderwoche als vollzogen. Abweichungen zu den Angaben des BMG möglich.
+          einer Kalenderwoche als vollzogen. Dadurch sind Abweichungen zu den Angaben des BMG Impfdashboards möglich.
         </p>
         <p>
           <strong>Aktualisierung der Informationen</strong>
