--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
           wird eine Verteilung zugesagter Lieferungen nach Bevölkerungsschlüssel angenommen.
         </p> -->
         <p>
-          <strong>27.4.2021</strong><br>
-          Die Angaben zu Lieferungen an Praxen und Impfzentren wurden angepasst. Bei der Berechnung von Impfquoten betrachten wir alle Lieferungen
-          einer Kalenderwoche als vollzogen. Dadurch sind Abweichungen zu den Angaben des BMG Impfdashboards möglich.
+          <strong>Angaben zu Lieferungen</strong><br>
+          Die Angaben zu Lieferungen wurden angepasst. Bei der Berechnung von Impfquoten betrachten wir alle Lieferungen
+          einer Kalenderwoche als vollzogen. Dies ist nötig, um Lieferungen an Praxen und Impfzentren differenzieren zu können. In Folge dieses Vorgehens sind Abweichungen zu den Angaben des BMG Impfdashboards möglich.
         </p>
         <p>
-          <strong>Aktualisierung der Informationen</strong>
-          <p>Die Angaben auf dieser Seite werden bis 11:30 Uhr vormittags stündlich aktualisiert. Die erste Aktualisierung erfolgt um 6:30 Uhr.</p>
+          <strong>Aktualisierung</strong><br>
+          Die Angaben auf dieser Seite werden bis 11:30 Uhr vormittags stündlich aktualisiert. Die erste Aktualisierung erfolgt um 6:30 Uhr.
         </p>
       </div>
 
