--- a/index.html
+++ b/index.html
@@ -84,20 +84,26 @@
           <strong>6.4.2021</strong><br>
           Beginn der Impfungen in den Arztpraxen.
         </p>
-<!--         <p>
+        <!--         <p>
           <strong>20.4.2021</strong><br>
           Die Daten zu den Lieferungen wurden mit Angaben des PEI zum Warenausgang für die KW 14 und 15 aktualisiert.
           Liegen keine Informationen vom PEI vor,
           wird eine Verteilung zugesagter Lieferungen nach Bevölkerungsschlüssel angenommen.
         </p> -->
         <p>
+          <strong>28.4.2021</strong><br>
+          Die Dokumentation der Impfungen der KVSH für den 27.4.2021 war fehlerhaft und wird morgen korrigiert nachgetragen. 
+          Heute sind darum zu wenig Impfungen für die Praxen dokumentiert. 
+        </p>
+        <p>
           <strong>Angaben zu Lieferungen</strong><br>
           Die Angaben zu Lieferungen wurden angepasst. Bei der Berechnung von Impfquoten betrachten wir alle Lieferungen
-          einer Kalenderwoche als vollzogen. Dies ist nötig, um Lieferungen an Praxen und Impfzentren differenzieren zu können. In Folge dieses Vorgehens sind Abweichungen zu den Angaben des BMG Impfdashboards möglich.
+          einer Kalenderwoche als vollzogen. Dies ist nötig, um Lieferungen an Praxen und Impfzentren differenzieren zu
+          können. In Folge dieses Vorgehens sind Abweichungen zu den Angaben des BMG Impfdashboards möglich.
         </p>
         <p>
           <strong>Aktualisierung</strong><br>
-          Die Angaben auf dieser Seite werden bis 11:30 Uhr vormittags stündlich aktualisiert. Die erste Aktualisierung erfolgt um 6:30 Uhr.
+          Die Angaben auf dieser Seite werden stündlich aktualisiert. 
         </p>
       </div>
 
@@ -161,7 +167,7 @@
     <div class="box">
       <iframe title="Projektion verfügbarer Impfdosen pro Woche in den Praxen" aria-label="Interactive line chart"
         id="datawrapper-chart-R3M2J" src="https://datawrapper.dwcdn.net/R3M2J/3/" scrolling="no" frameborder="0"
-        style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe>  
+        style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe>
     </div>
 
 
