--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </p>
         <p>
           <strong>Aktualisierung</strong><br>
-          Die Angaben auf dieser Seite werden stündlich aktualisiert. Die Zahlen zu Impfungen der Praxen stehen dadurch täglich ab ca. 5:30h zur Verfügung. 
+          Die Angaben auf dieser Seite werden stündlich aktualisiert. Die Zahlen zu den Impfungen der Praxen stehen dadurch täglich ab ca. 5:30h zur Verfügung. 
           Die Daten des BMG zu den Impfzentren werden über das <a href="https://www.impfdashboard.de">Impfdashboard des Bundes</a> unregelmäßig und am Wochenende in der Regel nicht aktualisiert. 
           Sie können dadurch erst verzögert aufgenommen werden.
         </p>
