--- a/index.html
+++ b/index.html
@@ -89,17 +89,12 @@
           Die Daten zu den Lieferungen wurden mit Angaben des PEI zum Warenausgang für die KW 14 und 15 aktualisiert.
           Liegen keine Informationen vom PEI vor,
           wird eine Verteilung zugesagter Lieferungen nach Bevölkerungsschlüssel angenommen.
-        </p> -->
-        <p>
-          <strong>28.4.2021</strong><br>
-          Die Dokumentation der Impfungen der KVSH für den 27.4.2021 war fehlerhaft und wird morgen korrigiert nachgetragen. 
-          Heute sind darum zu wenig Impfungen für die Praxen dokumentiert. 
-        </p>
+        </p> -->        
         <p>
           <strong>Angaben zu Lieferungen</strong><br>
-          Die Angaben zu Lieferungen wurden angepasst. Bei der Berechnung von Impfquoten betrachten wir alle Lieferungen
+          Bei der Berechnung von Impfquoten betrachten wir alle Lieferungen
           einer Kalenderwoche als vollzogen. Dies ist nötig, um Lieferungen an Praxen und Impfzentren differenzieren zu
-          können. In Folge dieses Vorgehens sind Abweichungen zu den Angaben des BMG Impfdashboards möglich.
+          können. 
         </p>
         <p>
           <strong>Aktualisierung</strong><br>
