--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" /> 
+  <meta http-equiv="Pragma" content="no-cache" /> 
+  <meta http-equiv="Expires" content="0" />
   <title>Corona-Impfindex</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/75c95ad019.js"></script>
@@ -75,28 +78,23 @@
         </div>
       </div>
       <div style="background-color: rgba(0, 0, 0, 0.057);border-radius: 30px;padding: 2rem;">
-        <h2>Aktuelles</h2>       
+        <h2>Erläuterungen zu den Daten</h2>       
         <p>
-          <strong>6.4.2021</strong><br>
-          Beginn der Impfungen in den Arztpraxen.
+          <strong>Datenquellen</strong><br>
+          Die Daten zu Impfungen der Arztpraxen werden annonymisiert von der KBV an das Zi übermittelt. 
+          Informationen zu Impfungen und Lieferungen werden vom BMG, PEI und RKI bezogen. Die Impfungen werden auf Basis des Ortes der Einrichtungen (Praxissitz/Impfzentren) regionalisiert, 
+          Informationen zum Wohnort der Geimpften liegen nicht vor.
         </p>
-        <!--         <p>
-          <strong>20.4.2021</strong><br>
-          Die Daten zu den Lieferungen wurden mit Angaben des PEI zum Warenausgang für die KW 14 und 15 aktualisiert.
-          Liegen keine Informationen vom PEI vor,
-          wird eine Verteilung zugesagter Lieferungen nach Bevölkerungsschlüssel angenommen.
-        </p> -->        
         <p>
-          <strong>Angaben zu Lieferungen</strong><br>
-          Bei der Berechnung von Impfquoten betrachten wir alle Lieferungen
-          einer Kalenderwoche als vollzogen. Dies ist nötig, um Lieferungen an Praxen und Impfzentren differenzieren zu
-          können. 
+          <strong>Lieferungen</strong><br>
+          Die Berechnung von Impfquoten ist nur näherungsweise möglich, da dem Zi keine verlässlichen regionalen Informationen zu Liefermengen vorliegen. Die beste Datengrundlage 
+          zu Liefermengen an die Praxen basiert auf Meldungen des Pharmagroßhandels an das PEI, hier sind aber regionale Unschärfen möglich. Im Dashboard werden wöchentliche 
+          Informationen zu Impfquoten erst nach dem Vorliegen der PEI Daten zur Verfügung gestellt. Zuvor basieren die Ergebnisse auf Schätzwerten auf Basis der Verträge und
+          Liefermengenplanung des BMG.
         </p>
         <p>
           <strong>Aktualisierung</strong><br>
-          Die Angaben auf dieser Seite werden stündlich aktualisiert. Die Zahlen zu den Impfungen der Praxen stehen dadurch täglich ab ca. 5:30h zur Verfügung. 
-          Die Daten des BMG zu den Impfzentren werden über das <a href="https://www.impfdashboard.de">Impfdashboard des Bundes</a> unregelmäßig und am Wochenende in der Regel nicht aktualisiert. 
-          Sie können dadurch erst verzögert aufgenommen werden.
+          Die Angaben auf dieser Seite werden stündlich aktualisiert. Die Zahlen zu den Impfungen der Praxen stehen dadurch täglich ab ca. 5:30h zur Verfügung.           
         </p>
       </div>
 
