--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
           <strong>Aktualisierung</strong><br>
           Die Angaben auf dieser Seite werden stündlich aktualisiert. Die Zahlen zu den Impfungen der Praxen stehen dadurch täglich ab ca. 5:30h zur Verfügung.           
         </p>
+        <p>
+          Alle Angaben sind aufgrund der uneinheitlichen Datenqualität vorsichtig und mit großer Sorgfalt zu interpretieren.
+        </p>
       </div>
 
     </div>
