--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           Die Angaben auf dieser Seite werden stündlich aktualisiert. Die Zahlen zu den Impfungen der Praxen stehen dadurch täglich ab ca. 5:30h zur Verfügung.           
         </p>
         <p>
-          Alle Angaben sind aufgrund der uneinheitlichen Datenqualität vorsichtig und mit großer Sorgfalt zu interpretieren.
+          <em><strong>Alle Angaben sind aufgrund der uneinheitlichen Datenqualität vorsichtig und mit großer Sorgfalt zu interpretieren.</strong></em>
         </p>
       </div>
 
