add verimpfung nach hst/bl

--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
         style="width: 0; min-width: 100% !important; border: none;" height="980"></iframe>
     </div>
     <div class="box">
+    <iframe title="Verimpfung gelieferter Dosen durch Praxen nach Hersteller und Bundesland in der letzten KW" aria-label="table" id="datawrapper-chart-5G7Jb" src="https://datawrapper.dwcdn.net/5G7Jb/10/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="744"></iframe>
+  </div>
+    <div class="box">
       <iframe title="Stand der Impfkampagne nach Bundesländern" aria-label="chart" id="datawrapper-chart-zA0AE"
         src="https://datawrapper.dwcdn.net/zA0AE/" scrolling="no" frameborder="0"
         style="width: 0; min-width: 100% !important; border: none;" height="964"></iframe>
