--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             Letzte Datenaktualisierung: <span id="aktualisiert"></span>,<span id="aktualisiertuhr"></span> Uhr </p>-->
         </div>
       </div>
-      <div style="background-color: rgba(0, 0, 0, 0.057);border-radius: 30px;padding: 2rem;">
+      <div style="background-color: rgba(0, 0, 0, 0.057);border-radius: 30px;padding: 2rem;font-size: .8rem;">
         <h2>Erläuterungen zu den Daten</h2>       
         <p>
           <strong>Datenquellen</strong><br>
@@ -91,6 +91,10 @@
           zu Liefermengen an die Praxen basiert auf Meldungen des Pharmagroßhandels an das PEI, hier sind aber regionale Unschärfen möglich. Im Dashboard werden wöchentliche 
           Informationen zu Impfquoten erst nach dem Vorliegen der PEI Daten zur Verfügung gestellt. Zuvor basieren die Ergebnisse auf Schätzwerten auf Basis der Verträge und
           Liefermengenplanung des BMG.
+        </p>
+        <p>
+          <strong>Impfungen</strong><br>
+          In Folge der Einbeziehung von Privatärzt*innen kommt es zu einer leichten Unterschätzung der Impfquote in den vertragsärztlichen Praxen, da privatärztliche Impfungen den Impfzentren zugeschlagen werden.
         </p>
         <p>
           <strong>Aktualisierung</strong><br>
