add missing PEI data comment

--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
         </p>
         <p>
           <strong>Aktualisierung</strong><br>
-          Die Angaben auf dieser Seite werden stündlich aktualisiert. Die Zahlen zu den Impfungen der Praxen stehen dadurch täglich ab ca. 5:30 Uhr zur Verfügung.           
+          Die Angaben auf dieser Seite werden stündlich aktualisiert. Die Zahlen zu den Impfungen der Praxen stehen dadurch täglich ab ca. 5:30 Uhr zur Verfügung.
+          <br>Aufgrund fehlender Informationen des PEI, können einzelne Abbildungen derzeit leider nicht aktualisiert werden.
         </p>
         <p>
           <em><strong>Alle Angaben sind aufgrund der uneinheitlichen Datenqualität vorsichtig und mit großer Sorgfalt zu interpretieren.</strong></em>
