--- a/index.html
+++ b/index.html
@@ -82,16 +82,16 @@
         <p>
           <strong>Datenquellen</strong><br>
           Die Daten zu Impfungen der Arztpraxen werden anonymisiert von der KBV an das Zi übermittelt. 
-          Informationen zu Impfungen und Lieferungen werden vom BMG, PEI und RKI bezogen. Die Impfungen werden auf Basis des Ortes der Einrichtungen (Praxissitz/Impfzentren) regionalisiert, 
+          Informationen zu Impfungen und Lieferungen werden vom BMG und RKI bezogen. Die Impfungen werden auf Basis des Ortes der Einrichtungen (Praxissitz/Impfzentren) regionalisiert, 
           Informationen zum Wohnort der Geimpften liegen nicht vor.
         </p>
-        <p>
+   <!--     <p>
           <strong>Lieferungen</strong><br>
           Die Berechnung von Impfquoten ist nur näherungsweise möglich, da dem Zi keine verlässlichen regionalen Informationen zu Liefermengen vorliegen. Die beste Datengrundlage 
           zu Liefermengen an die Praxen basiert auf Meldungen des Pharmagroßhandels an das PEI, hier sind aber regionale Unschärfen möglich. Im Dashboard werden wöchentliche 
           Informationen zu Impfquoten erst nach dem Vorliegen der PEI-Daten zur Verfügung gestellt. Zuvor basieren die Ergebnisse auf Schätzwerten auf Basis der Verträge und
           Liefermengenplanung des BMG.
-        </p>
+        </p> -->
         <p>
           <strong>Impfungen</strong><br>
           In Folge der Einbeziehung von Privatärzt*innen kommt es zu einer leichten Unterschätzung der Impfquote in den vertragsärztlichen Praxen, da privatärztliche Impfungen den Impfzentren zugeschlagen werden.
@@ -99,7 +99,7 @@
         <p>
           <strong>Aktualisierung</strong><br>
           Die Angaben auf dieser Seite werden stündlich aktualisiert. Die Zahlen zu den Impfungen der Praxen stehen dadurch täglich ab ca. 5:30 Uhr zur Verfügung.
-          <br>Aufgrund fehlender Informationen des PEI, können einzelne Abbildungen derzeit leider nicht aktualisiert werden.
+      <!--    <br>Aufgrund fehlender Informationen des PEI, können einzelne Abbildungen derzeit leider nicht aktualisiert werden. -->
         </p>
         <p>
           <em><strong>Alle Angaben sind aufgrund der uneinheitlichen Datenqualität vorsichtig und mit großer Sorgfalt zu interpretieren.</strong></em>
@@ -150,14 +150,14 @@
       </div>
     </div>
 
-    <div class="box">
+<!--    <div class="box">
       <iframe title="Impfungen in Arztpraxen in der letzten Kalenderwoche" aria-label="chart1"
         id="datawrapper-chart-YT84k" src="https://datawrapper.dwcdn.net/YT84k/" scrolling="no" frameborder="0"
         style="width: 0; min-width: 100% !important; border: none;" height="980"></iframe>
-    </div>
-    <div class="box">
+    </div> -->
+<!--    <div class="box">
     <iframe title="Verimpfung gelieferter Dosen durch Praxen nach Hersteller und Bundesland in der letzten KW" aria-label="table" id="datawrapper-chart-5G7Jb" src="https://datawrapper.dwcdn.net/5G7Jb/10/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="744"></iframe>
-  </div>
+  </div> -->
     <div class="box">
       <iframe title="Stand der Impfkampagne nach Bundesländern" aria-label="chart" id="datawrapper-chart-zA0AE"
         src="https://datawrapper.dwcdn.net/zA0AE/" scrolling="no" frameborder="0"
@@ -169,7 +169,7 @@
 
  
  
-    <div class="boxes">
+<!--    <div class="boxes">
       <div class="box">
         <iframe title="Prognose der Impfquote" aria-label="Interactive area chart" id="datawrapper-chart-29NoU"
           src="https://datawrapper.dwcdn.net/29NoU/" scrolling="no" frameborder="0"
@@ -182,7 +182,7 @@
       </div>
   
 
-    </div>
+    </div> -->
 
 
 
