two new plots erst- und zweitimpfungen

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
       <div class="box">
 
-        <iframe title="Entwicklung der Impfkampagne gegen COVID-19" aria-label="Interactive line chart"
+        <iframe title="Wöchentliche Impfungen" aria-label="Interactive line chart"
           id="datawrapper-chart-KW0Ku" src="https://datawrapper.dwcdn.net/KW0Ku/" scrolling="no" frameborder="0"
           style="width: 0; min-width: 100% !important; border: none;" height="500"></iframe>
 
@@ -146,6 +146,22 @@
       <div class="box">
         <iframe title="Erst und Zweitimpfungen nach Einrichtung " aria-label="Interactive area chart" 
         id="datawrapper-chart-Tx4ll" src="https://datawrapper.dwcdn.net/Tx4ll/1/" 
+        scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="500"></iframe>
+      </div>
+
+    <div class="box">
+
+        <iframe title="Erst- und Zweitimpfungen nach Einrichtung und KW" aria-label="Interactive line chart"
+          id="datawrapper-chart-pSOIQ" src="https://datawrapper.dwcdn.net/pSOIQ/1/" scrolling="no" frameborder="0"
+          style="width: 0; min-width: 100% !important; border: none;" height="500"></iframe>
+
+
+    </div>
+
+      
+    <div class="box">
+        <iframe title="Anteile an Impfungen nach Einrichtung und KW" aria-label="Interactive area chart" 
+        id="datawrapper-chart-xJasR" src="https://datawrapper.dwcdn.net/xJasR/1/" 
         scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="500"></iframe>
       </div>
     </div>
