new plot bestellungen und liefermengen

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </div>
       
       <div class="box">
-        <iframe title="Bestellungen und mögliche Liefermengen" aria-label="Interactive line chart" id="datawrapper-chart-19VlX" src="https://datawrapper.dwcdn.net/19VlX/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="500"></iframe>
+        <iframe title="Bestellungen und Liefermengen" aria-label="Interactive line chart" id="datawrapper-chart-fIDOn" src="https://datawrapper.dwcdn.net/fIDOn/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="500"></iframe>
       </div>
  
       <div class="box">
