update index html: hinweis viertimpfungen rki

--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
         <p>
           <em><strong>Alle Angaben sind aufgrund der uneinheitlichen Datenqualität vorsichtig und mit großer Sorgfalt zu interpretieren.</strong></em>
         </p>
+        <p>
+          <em><strong>! Derzeit (Stand 22.2.22) weist das RKI keine Viert-Impfungen aus. Aus diesem Grund werden die Viert-Impfungen aus den Praxen (übermittelt von der KBV) zu den RKI-Zahlen hinzugezählt. Die Zahl der Viert-Impfungen von anderen Impforten (insbesondere Impfzentren) ist derzeit unbekannt.</strong></em>
+        </p>
       </div>
 
     </div>
