change webcounter endpoint

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
   </div>
   <!-- Wrapper Ends -->
-  <img src="https://analytics.ziapp.de/view/covidimpfindex/counter.png?pageid=/index.html&cookiedissent=true" style="border:0"
+  <img src="https://analytics.api.ziapp.de/view/covidimpfindex/counter.png?pageid=/index.html&cookiedissent=true" style="border:0"
       alt="">
 </body>
 </html>
