--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <nav class="main-nav">
       <ul>
         <li>
-          <a href="https://www.zidatasciencelab.de/covid19dashboard/Start">Frühindikatoren</a>
+          <a href="https://smed.ziapp.de/">Ambulante Akut- und Notfälle</a>
         </li>
         <li>
           <a href="https://www.zi.de"><span style=" text-transform: none;">Zi</span></a>
